tests/invalid/ho_default_func_3.err_exp
ho_default_func_3.m:037: In clause for `baz(in, out)':
ho_default_func_3.m:037:   mode error in conjunction. The next two error
ho_default_func_3.m:037:   messages indicate possible causes of this error.
ho_default_func_3.m:037: 
ho_default_func_3.m:037:   In clause for `baz(in, out)':
ho_default_func_3.m:037:   in call to function `univ.univ'/1:
ho_default_func_3.m:037:   mode error: argument [38;5;87m`V_7'[39;49m and the [38;5;87mreturn value[39;49m
ho_default_func_3.m:037:   [38;5;87m`V_6'[39;49m have the following insts:
ho_default_func_3.m:037:     /* unique */ (func(di) = uo is det),
ho_default_func_3.m:037:     free
ho_default_func_3.m:037:   which does not match any of the modes for function
ho_default_func_3.m:037:   `univ.univ'/1.
ho_default_func_3.m:037: 
ho_default_func_3.m:037:   In clause for `baz(in, out)':
ho_default_func_3.m:037:   in call to predicate `univ.univ_to_type'/2:
ho_default_func_3.m:037:   mode error: arguments [38;5;87m`V_6, Y0'[39;49m have the following
ho_default_func_3.m:037:   insts:
ho_default_func_3.m:037:     free,
ho_default_func_3.m:037:     free
ho_default_func_3.m:037:   which does not match any of the modes for predicate
ho_default_func_3.m:037:   `univ.univ_to_type'/2.
